--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.33.0",
-    "react-native-button": "^1.7.0"
+    "react-native-button": "^1.7.0",
+    "react-native-viewpager": "^0.2.11"
   }
 }
