--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "native-base": "^0.5.8",
     "react": "15.3.2",
     "react-native": "0.33.0",
     "react-native-button": "^1.7.0",
